tls-auth option and key generation added.

--- a/templates/default/client.conf.erb
+++ b/templates/default/client.conf.erb
@@ -11,3 +11,6 @@ cert <%= @username %>.crt
 key <%= @username %>.key
 comp-lzo
 verb 3
+<% if node["openvpn"]["tls_auth"] == true -%>
+tls-auth ta.key 1
+<% end -%>
